# JGJ59_Calculator

./: .gitignore  1.py  2ds.py  3.py  5.py  6.py  7.py  construction_safety.db  jg59-scorer.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-android.yml  build-apk.yml
