[build-system]
requires = ["flet"]
build-backend = "flet.build"

[project]
name = "safety-scoring-app"
version = "1.0.0"
description = "JGJ59-2011建筑施工安全智能评分系统"
authors = [
    {name = "安徽两淮建设技术中心", email = "contact@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "flet>=0.21.0",
]

[tool.flet]
app_name = "安全评分系统"
app_short_name = "安全评分"
app_description = "JGJ59-2011建筑施工安全检查标准评分系统"
company_name = "安徽两淮建设技术中心"
product_name = "安全评分系统"
copyright = "© 2025 安徽两淮建设技术中心"
version = "1.0.0"
homepage = "https://example.com"
issues_page = "https://example.com/issues"
privacy_policy = "https://example.com/privacy"
theme_color = "#2196F3"
sdk_version = "34"

[tool.flet.android]
package_name = "com.lianghuai.safety.scoring"
compile_sdk_version = 34
min_sdk_version = 24
target_sdk_version = 34
permissions = [
    "INTERNET",
    "WRITE_EXTERNAL_STORAGE",
    "READ_EXTERNAL_STORAGE"
]
debug = false
release = true

[tool.flet.ios]
bundle_identifier = "com.lianghuai.safety.scoring"
team_id = ""
codesign_identity = ""
provisioning_profile = ""